# docs/swagger.yaml
@@ -38,6 +38,58 @@ info:
   version: "1.0"
 paths:
   /api/v1/todo:
+    delete:
+      operationId: delete-todo-by-id
+      parameters:
+      - description: id
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Todo'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "405":
+          description: Method not allowed
+          schema:
+            type: string
+      summary: delete a todo item by id
+    get:
+      description: Get all todos
+      operationId: get-all-todos
+      parameters:
+      - description: id
+        in: query
+        name: id
+        type: integer
+      - description: author name
+        in: query
+        name: author
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Todo'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "405":
+          description: Method not allowed
+          schema:
+            type: string
+      summary: get all items in the todo list
     post:
       description: create a todo
       operationId: create-todo
@@ -53,86 +105,11 @@ paths:
           schema:
             type: string
       summary: create a new todo
-  /api/v1/todo/{author}:
-    get:
-      operationId: ger-todo-by-Author
-      parameters:
-      - description: todo Author
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Todo'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "405":
-          description: Method not allowed
-          schema:
-            type: string
-      summary: Get a todo item by Author
-  /api/v1/todo/{id}:
-    delete:
-      operationId: delete-todo-by-id
-      parameters:
-      - description: todo ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Todo'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "405":
-          description: Method not allowed
-          schema:
-            type: string
-      summary: delete a todo item by ID
-    get:
-      description: get todo item by id
-      operationId: get-todo-by-id
-      parameters:
-      - description: todo ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Todo'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "405":
-          description: Method not allowed
-          schema:
-            type: string
-      summary: get todo item by id
     put:
       operationId: update-todo-by-id
       parameters:
-      - description: todo ID
-        in: path
+      - description: id
+        in: query
         name: id
         required: true
         type: string
@@ -152,20 +129,4 @@ paths:
           schema:
             type: string
       summary: update a todo item by ID
-  /api/v1/todos:
-    get:
-      description: Get all todos
-      operationId: get-all-todos
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Todo'
-        "405":
-          description: Method not allowed
-          schema:
-            type: string
-      summary: get all items in the todo list
 swagger: "2.0"
